--- a/index.css
+++ b/index.css
@@ -79,6 +79,7 @@ body {
   color: var(--primary-font-color);
   gap: 18px;
   height: 200px;
+  margin-top: 50px;
 }
 
 #create-board-btn {
@@ -586,7 +587,7 @@ h2 {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 600px;
-  display: flex;
+  display: none;
   flex-direction: column;
   padding: 30px;
   gap: 20px;
@@ -904,6 +905,7 @@ input:checked + #label-checkbox-theme:after {
 
   .hide-side-bar-div {
     display: none;
+    translate: 20.5s;
   }
 
   .toggle-div {
