I should sleep, more "errors" , try again tomorrow

--- a/index.css
+++ b/index.css
@@ -523,11 +523,12 @@ header {
 }
 
 .deleteBoardWindowBtns {
-  display: flex;
+  display: none;
   justify-content: space-between;
 }
 
 #delete-board {
+  display: none;
   width: 280px;
   background-color: #ea5555;
 }
