--- a/index.css
+++ b/index.css
@@ -419,7 +419,7 @@ header {
   font-weight: 500;
   font-size: 14px;
   border-radius: 10px;
-  display: flex;/*Remember to change it back to none if it isnt already*/
+  display: none;/*Remember to change it back to none if it isnt already*/
   z-index: 3;
   transition: all 0.3s ease-in;
 }
