--- a/index.css
+++ b/index.css
@@ -299,13 +299,16 @@ header {
 
 .side-bar-bottom {
   display: flex; /*Remember to change it back to none if it isnt already*/
-  justify-content: center;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: auto;
-  margin-bottom: 40px;
+  flex-direction: column; /* Arrange items vertically */
 }
-
+.side-bar> .side-bar-bottom{
+  display: flex; /*Remember to change it back to none if it isnt already*/
+  flex-direction: column; /* Arrange items vertically */
+  
+    display: flex;
+    align-content: end;
+    justify-content: flex-end;
+}
 /* Edit task */
 
 #create-task-btn,
@@ -1132,6 +1135,7 @@ input:checked + #label-checkbox-theme:after {
     height: 100%;
     margin-bottom: 0;
     margin-top: 0;
+    
   }
 
   .hide-side-bar-div {
