--- a/index.css
+++ b/index.css
@@ -174,7 +174,7 @@ h4 {
   display:flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin-top: 20rem;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1163,7 +1163,7 @@ input:checked + #label-checkbox-theme:after {
     width: 80%;
     align-items: center;
     margin: 20px;
-    margin-top: 30rem;
+   /* margin-top: 30rem;*/
     justify-content: center;
     justify-content: space-around;
     padding: 6px;
